fix scrollbars?

--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ div {
     background-color: hsl(197, 20%, 80%);
     color: hsl(var(--hue), var(--saturation), 15%);
     border: 4px solid hsl(var(--hue), var(--saturation), 25%);
-    border-radius: 64px;
-    overflow: scroll;
+    border-radius: 8px;
+    overflow-y: auto;
 }
 
 #board {
